changed Cornerstone to Merriweather

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:300,400,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo:900|Merriweather:700,900" rel="stylesheet">
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -64,28 +65,28 @@
       <!-- Teammatic -->
       <div class="project-div" style="padding-top: 24px">
         <a href="#">
-          <h1 style="font-size: 9.6rem">Teammatic</h1>
+          <h1 id="project-title">Teammatic</h1>
         </a>
         <p>team-creation tool for instructors in class // INTERACTION DESIGN + PROUDCT</p>
       </div>
       <!-- Fitted -->
       <div class="project-div">
         <a href="#">
-          <h1 style="font-size: 9.6rem;">Fitted</h1>
+          <h1 id="project-title">Fitted</h1>
         </a>
         <p>mobile app to find the right-sized clothing // INTERACTION DESIGN + PRODUCT</p>
       </div>
       <!-- Thinkabit Lab -->
       <div class="project-div">
         <a href="#">
-          <h1 style="font-size: 9.6rem;">Thinkabit Lab</h1>
+          <h1 id="project-title">Thinkabit Lab</h1>
         </a>
         <p>applying human-centered design to Qualcomm's Thinkabit Lab // USER RESEARCH</p>
       </div>
       <!-- Timekeeper -->
       <div class="project-div">
         <a href="#">
-          <h1 style="font-size: 9.6rem;">Timekeeper</h1>
+          <h1 id="project-title">Timekeeper</h1>
         </a>
         <p>scheduling app that optimizes daily tasks // UX &amp; UI DESIGN</p>
       </div>
@@ -99,20 +100,20 @@
       <!-- SlackRR -->
       <div class="project-div" style="padding-top: 24px">
         <a href="#">
-          <h1 id="project-color" style="font-size: 9.6rem">SlackRR</h1>
+          <h1 id="project-title" style="color: #74E3B5;">SlackRR</h1>
         </a>
         <p>implementing read receipts in Slack</p>
       </div>
       <!-- Trackfit -->
       <div class="project-div">
         <a href="#">
-          <h1 id="project-color" style="font-size: 9.6rem;">Trackfit</h1>
+          <h1 id="project-title" style="color: #74E3B5;">Trackfit</h1>
         </a>
         <p>tired of confusing fitness apps so I'm attempting to ship my own</p>
       </div>
       <!-- Focus.In -->
       <div class="project-div">
-        <h1 id="project-wip" style="font-size: 9.6rem;">Focus.in</h1>
+        <h1 id="project-title" style="opacity: 0.5;">Focus.in</h1>
         <p id="project-wip"><strong>COMING SOON</strong> - productivity app meant to segment your time better &amp; more efficiently</p>
       </div>
     </div>
