--- a/teammatic.html
+++ b/teammatic.html
@@ -38,7 +38,7 @@
         <a href="#" style="color: #4A4A4A;"><h6 class="headertext">ALEX TRAN</h6></a>
       </div>
       <div class="u-pull-right">
-        <a href="#work"
+        <a href="#"
           <h6 class="headertext" style="display: inline-block; padding-right: 32px">WORK</h6>
         </a>
         <a href="#projects"
@@ -57,66 +57,7 @@
       <h3>Proficient in a thirst for knowledge, coffee, and Overwatch.</h3>
     </div>
 
-    <!-- Work Section -->
-    <a id="work"></a>
-    <div class="section-div">
-      <h5 style="line-height: 0px;"><strong>WORK</strong></h5>
-      <h6 class="section-caption">delighting users, one product at a time.</h6>
-      <!-- Teammatic -->
-      <div class="project-div" style="padding-top: 24px">
-        <a href="teammatic.html">
-          <h1 id="project-title">Teammatic</h1>
-        </a>
-        <p>team-creation tool for instructors in class // INTERACTION DESIGN + PROUDCT</p>
-      </div>
-      <!-- Fitted -->
-      <div class="project-div">
-        <a href="#">
-          <h1 id="project-title">Fitted</h1>
-        </a>
-        <p>mobile app to find the right-sized clothing // INTERACTION DESIGN + PRODUCT</p>
-      </div>
-      <!-- Thinkabit Lab -->
-      <div class="project-div">
-        <a href="#">
-          <h1 id="project-title">Thinkabit Lab</h1>
-        </a>
-        <p>applying human-centered design to Qualcomm's Thinkabit Lab // USER RESEARCH</p>
-      </div>
-      <!-- Timekeeper -->
-      <div class="project-div">
-        <a href="#">
-          <h1 id="project-title">Timekeeper</h1>
-        </a>
-        <p>scheduling app that optimizes daily tasks // UX &amp; UI DESIGN</p>
-      </div>
-    </div>
 
-    <!-- Projects Section -->
-    <a id="projects"></a>
-    <div class="section-div" id="projects">
-      <h5 style="line-height: 0px;"><strong>PROJECTS</strong></h5>
-      <h6 class="section-caption">for those pesky nights &amp; weekends</h6>
-      <!-- SlackRR -->
-      <div class="project-div" style="padding-top: 24px">
-        <a href="#">
-          <h1 id="project-title" style="color: #74E3B5;">SlackRR</h1>
-        </a>
-        <p>implementing read receipts in Slack</p>
-      </div>
-      <!-- Trackfit -->
-      <div class="project-div">
-        <a href="#">
-          <h1 id="project-title" style="color: #74E3B5;">Trackfit</h1>
-        </a>
-        <p>tired of confusing fitness apps so I'm attempting to ship my own</p>
-      </div>
-      <!-- Focus.In -->
-      <div class="project-div">
-        <h1 id="project-title" style="opacity: 0.5;">Focus.in</h1>
-        <p id="project-wip"><strong>COMING SOON</strong> - productivity app meant to segment your time better &amp; more efficiently</p>
-      </div>
-    </div>
 
     <!-- Contact Section -->
     <a id="contact"></a>
