added to Teammatic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:300,400,600,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Exo:900|Merriweather:700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo:900|Merriweather:300,700,900|MeMerriweather+Sans:300" rel="stylesheet">
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
