--- a/teammatic.html
+++ b/teammatic.html
@@ -16,7 +16,7 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:300,400,600,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Exo:900|Merriweather:700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo:900|Merriweather:300,700,900" rel="stylesheet">
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -35,7 +35,7 @@
     <!-- Header Section -->
     <div class="header-div" style="padding-top: 24px; padding-bottom: 24px">
       <div class="u-pull-left">
-        <a href="#" style="color: #4A4A4A;"><h6 class="headertext">ALEX TRAN</h6></a>
+        <a href="index.html" style="color: #4A4A4A;"><h6 class="headertext">ALEX TRAN</h6></a>
       </div>
       <div class="u-pull-right">
         <a href="#"
@@ -52,12 +52,39 @@
 
     <!-- Intro Section -->
     <div class="section-div">
-      <h3 style="padding-bottom: 24px;">Welcome&#126;</h3>
-      <h3 style="padding-bottom: 24px;">I’m <span style="font-weight: 800; color: #5E1AFF">Alex</span>, a design-centered human looking to improve people’s lives through the technology they use. I work to promote design thinking and solutions.</h3>
-      <h3>Proficient in a thirst for knowledge, coffee, and Overwatch.</h3>
+      <h1 id="project-title-secondary">Teammatic</h1>
+      <h6>design lead // UC San Diego Research 2016</h6>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img u-max-full-width" src="images/teamme-final.png">
+        </div>
+      </div>
+
+      <h5 style="padding-bottom: 24px;"><strong>tl&semi;dr&colon;</strong> I was in charge of designing a team formation UI tool for instructors called Teammatic. It features a clear, intuitive system for efficiently creating teams given a series of customizable constraints, i.e. availability, leadership, gender distribution. </h5>
     </div>
 
+    <div class="section-div">
+      <h3 class="section-header">The Problem</h3>
+      <p class="text">Creating good teams is hard. We found this especially so in the education system; as an instructor, the goal is to formulate efficient teams as soon as possible in order to progress through the material in a timely manner. Our initial findings found that instructors either 1) spent too much time trying to initially assess their students’ skills &amp; qualities before organizing teams, or 2) randomly (or with little assessment) assigned teams that had varying levels of success.</p>
+      <br>
+      <h5 style="padding-bottom: 24px; opacity: 0.75">We set out to create a tool that would make forming teams more effective and easy for instructors.</h5>
+    </div>
 
+    <div class="section-div">
+      <h3 class="section-header">Our Process</h3>
+      <p class="text">Initial research went into trying to find existing tools that tried solving the problem of team formation. We found CATME (Comprehensive Assessment of Team Member Effectiveness) to be the only existing solution, which uses their Team-Maker tool to collect student information, and utilizes the data to assign teams according to a criteria specified by the instructor. However, user feedback has shown varying success within classrooms. Case study here.<br><br>Based on this and additional user interviews, our team established three design principles that would help guide our design decision throughout this process.</p>
+      <br>
+      <h5 style="padding-bottom: 16px; opacity: 0.75">We wanted to build a tool that would:
+        <ul>
+          <li>Help instructors <strong>quickly form teams</strong></li>
+          <li><strong>Provide instructors with insightful feedback</strong> on team compatibility</li>
+          <li><strong>Be simple and easy</strong> for instructors to use</li>
+        </ul>
+      </h5>
+      <p class="text">The first thing we wanted to tackle was how instructors would actually form teams; we would focus on the onboarding process after. After a few paper-and-pen sketching sessions, we came up with a few ideas and drew them up as wireframes.</p>
+
+
+    </div>
 
     <!-- Contact Section -->
     <a id="contact"></a>
