need to add pictures

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             B&#275;hance
           </a>
           &middot;
-          <a href="https://www.linkedin.com/in/alex-tran-441540a0/" class="contact-a">
+          <a href="https://www.linkedin.com/in/alex-tran-441540a0/"  target="_blank" class="contact-a">
             Linkedin
           </a>
         </h3>
