--- a/teammatic.html
+++ b/teammatic.html
@@ -103,49 +103,45 @@
     <!-- Solution Section -->
     <div class="section-div">
       <h3 class="section-header">Our Solution</h3>
-      <p class="text">Teammatic handles student availability, leadership attribute, gender, role distribution, and student preferences for possible teammates. Once the data is received, instructors will have the ability to choose constraints of how they want to create teams. The algorithm used for the team suggestions will account for these various constraints. After a suggested group of teams have been formed,  the instructor will have the ability to modify these teams to their liking.</p>
+      <p class="text">Teammatic handles student availability, leadership attribute, gender, role distribution, and student preferences for possible teammates. Once the data is received, instructors will have the ability to choose constraints of how they want to create teams. The algorithm used for the team suggestions will account for these various constraints. After a suggested group of teams have been formed, the instructor will have the ability to modify these teams to their liking.</p>
 
       <br><h3>image goes here</h3><br>
 
-      <p class="text">Quickly ideating and prototyping became key here. We wanted to find a balance between providing instructors with enough student information to make informed decisions while also having a large enough workspace to create/edit teams. Further data gathering helped us scrap the Student Quickview component in our initial 3-column design to  a final 2-column design that featured both a larger workspace and filtered Student Roster component (see image below).</p>
+      <p class="text">Student Roster (v0.3), (v0.7), (v1.0).<br>This is one of the UI components that was prototyped the most. We really tried to find a balance between information visibility and screen real-estate. Including a filter makes it easier for instructors to view the information they need at any given time.</p>
 
       <br><h3>image goes here</h3><br>
 
-      <h5 style="padding-bottom: 16px; opacity: 0.75">The switch helped us address these issues:
-        <ul>
-          <li><strong>quickly form teams</strong> - indicate team size, input needed constraints, and voila&colon; Teammatic does the work</li>
-          <li><strong>provide instructors with insightful feedback</strong> - team compatibility &#37; present; action history to track most recent action</li>
-          <li><strong>be simple and easy</strong> - no confusing, unintuitive buttons or icons&semi; clear, even spacing between text and components</li>
-        </ul>
-      </h5>
+      <p class="text">Student Swap Process (v1.0).<br>We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface. Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.</p>
+
+      <br><h3>image goes here</h3><br>
+
+      <p class="text">Constraint Modal (v0.3), (v0.6), (v1.0).<br>Apart from the minor UI changes, our research showed that instructors wanted to see all available constraints possible and choose accordingly with the least amount of interaction cost. Don’t mind the varying modal sizes…</p>
+    </div>
+
+    <!-- Outcomes Section -->
+    <div class="section-div">
+      <h3 class="section-header">Outcomes</h3>
+      <p class="text">We conducted a study with 14 teaching assistants from various group-based courses, asking them to create teams with a set of constraint requirements, i.e. 4 students per team, one student per team, gender balance. As you can see from the results below, Teammatic outperformed our participants in both time and overall teammate compatibility.</p>
+
+      <br><h3>image goes here</h3><br>
+
+      <p class="text"><strong>Lessons learned</strong></p>
+      <p class="text">Keeping track of all the students' information was the biggest problem. Given the many requirements, many participants chose to ignore the soft constraints (&#35; of overlapping schedule availability, &#35; of leaders per team, etc.) and focused their time on the hard constraints (# of students per team, student preferences, etc.) listed. It was a common trend that participants would eventually start to randomly place students together without any regard to the constraints given.</p>
+
+      <p class="text">Teammatic was a research project that served the basis for my friend Carolyn’s thesis. I wanted to help her not only because she was a great person to work with, but because I really empathized with the problem that was presented. Is there really anything worse than a group member who slacks off?<br><br>While designing Teammatic, we already accepted that perfect team formation is impossible. However, we learned that instructors are generally happy with auto-generated teams based on student compatibility, as long as we provided them with the freedom and flexibility to make changes when desired, i.e. a mixed-initiative interface.</p>
+
+      <p class="text"><strong>Moving forward</strong></p>
+      <p class="text">The interface is a work in progress, but we are heading in the right direction based on positive user feedback (hooray!). Currently Teammatic only has the ability to generate teams; it has yet to become a fully working product. It would be ideal to incorporate the entire team formation process into Teammatic, from gathering student data, to forming teams, to post-course feedback. <br><br>For now, Teammatic is being used by a few involved professors, who will continue to give us insight into how we can improve the interface and how we might implement new, undiscovered features.
+      </p>
     </div>
 
     <!-- Contact Section -->
     <a id="contact"></a>
     <div class="section-div" id="projects">
-      <h5 style="line-height: 0px;"><strong>CONTACT</strong></h5>
-      <h6 class="section-caption">call me, beep me if you wanna reach me</h6>
       <div style="padding-top: 0px">
         <h3 style="padding-bottom: 24px;">
-          <a href="mailto:awtran16@gmail.com?Subject=Hello!" target="_top" class="contact-a">
-            Email
-          </a>
-          &middot;
-          <a href="http://twitter.com/wolfinthecity_" target="_blank" class="contact-a">
-            Twitter
-          </a>
-          &middot;
-          <a href="http://medium.com/@alextrantheeman" target="_blank" class="contact-a">
-            Medium
-          </a>
-          &middot;
-          <a href="http://behance.net/awtran16f6e0" target="_blank" class="contact-a">
-            B&#275;hance
-          </a>
-          &middot;
-          <a href="https://www.linkedin.com/in/alex-tran-441540a0/" class="contact-a">
-            Linkedin
-          </a>
+          <a href="index.html" class="contact-a">&laquo; Home</a>
+          <a href="index.html" class="contact-a u-pull-right">Fitted &raquo;</a>
         </h3>
       </div>
     </div>
