added other html files

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="section-div">
       <h3 style="padding-bottom: 24px;">Welcome&#126;</h3>
       <h3 style="padding-bottom: 24px;">I’m <span style="font-weight: 800; color: #5E1AFF">Alex</span>, a design-centered human looking to improve people’s lives through the technology they use. I work to promote design thinking and solutions.</h3>
-      <h3>Proficient in a thirst for knowledge, coffee, and Overwatch.</h3>
+      <h3>Constantly thirsty for knowledge &amp; coffee.</h3>
     </div>
 
     <!-- Work Section -->
@@ -71,21 +71,21 @@
       </div>
       <!-- Fitted -->
       <div class="project-div">
-        <a href="#">
+        <a href="fitted.html">
           <h1 id="project-title">Fitted</h1>
         </a>
         <p>mobile app to find the right-sized clothing // INTERACTION DESIGN + PRODUCT</p>
       </div>
       <!-- Thinkabit Lab -->
       <div class="project-div">
-        <a href="#">
+        <a href="thinkabit.html">
           <h1 id="project-title">Thinkabit Lab</h1>
         </a>
         <p>applying human-centered design to Qualcomm's Thinkabit Lab // USER RESEARCH</p>
       </div>
       <!-- Timekeeper -->
       <div class="project-div">
-        <a href="#">
+        <a href="timekeeper.html">
           <h1 id="project-title">Timekeeper</h1>
         </a>
         <p>scheduling app that optimizes daily tasks // UX &amp; UI DESIGN</p>
