--- a/timekeeper.html
+++ b/timekeeper.html
@@ -52,8 +52,8 @@
 
     <!-- Intro Section -->
     <div class="section-div">
-      <h1 id="project-title-secondary">Teammatic</h1>
-      <h6>design lead // UC San Diego Research 2016</h6>
+      <h1 id="project-title-secondary">Timekeeper</h1>
+      <h6>ux&amp;ui designer // UC San Diego 2016</h6>
       <div class="row">
         <div class="twelve columns">
           <img class="landing-img u-max-full-width" src="images/teamme-final.png">
@@ -140,8 +140,8 @@
     <div class="section-div" id="projects">
       <div style="padding-top: 0px">
         <h3 style="padding-bottom: 24px;">
-          <a href="index.html" class="contact-a">&laquo; Home</a>
-          <a href="fitted.html" class="contact-a u-pull-right">Fitted &raquo;</a>
+          <a href="thinkabit.html" class="contact-a">&laquo; Thinkabit</a>
+          <a href="index.html" class="contact-a u-pull-right">Home &raquo;</a>
         </h3>
       </div>
     </div>
