adding to fitted

--- a/fitted.html
+++ b/fitted.html
@@ -60,21 +60,25 @@
         </div>
       </div>
 
-      <h5 style="padding-bottom: 24px;"><strong>tl&semi;dr&colon;</strong> I was in charge of designing a team formation UI tool for instructors called Teammatic. It features a clear, intuitive system for efficiently creating teams given a series of customizable constraints, i.e. availability, leadership, gender distribution. </h5>
+      <h5 style="padding-bottom: 24px;"><strong>tl&semi;dr&colon;</strong> I worked with a team to design a mobile clothing app aimed to providing users with accurate sizing recommendations based on their preferences across clothing brands.</h5>
     </div>
 
     <!-- Problem Section -->
     <div class="section-div">
       <h3 class="section-header">The Problem</h3>
-      <p class="text">Creating good teams is hard. We found this especially so in the education system; as an instructor, the goal is to formulate efficient teams as soon as possible in order to progress through the material in a timely manner. Our initial findings found that instructors either 1) spent too much time trying to initially assess their students’ skills &amp; qualities before organizing teams, or 2) randomly (or with little assessment) assigned teams that had varying levels of success.</p>
+      <p class="text">The idea came from an issue we each saw every time we bought clothes online. It seemed more often than not <strong>the ease of online shopping was overshadowed by the challenge of finding the right size</strong>. It’s hard to know what fits best when there is so much variation in sizing across different brands. People could choose to estimate their size, and then deal with returning clothes if they do not fit. Or, people could spend hours in fitting room. But who really wants to be spending their time doing that?</p>
       <br>
-      <h5 style="padding-bottom: 24px; opacity: 0.75">We set out to create a tool that would make forming teams more effective and easy for instructors.</h5>
+
+      <h3 class="section-header">A Solution</h3>
+      <p class="text">Fitted aims to give you the confidence in finding the right-sized clothes with accurate body measurements in order to provide you with personalized sizing recommendations. Users can browse styles from their favorite brands and be given accurate sizing suggestions tailored to their preferences and/or needs.</p>
+      <br>
+      <h5 style="padding-bottom: 24px; opacity: 0.75">We hoped to address these key problem areas: <strong>finding the right size</strong>, <strong>establishing trust through sizing recommendations</strong>, and <strong>streamlining the online shopping experience</strong>.</h5>
     </div>
 
     <!-- Process Section -->
     <div class="section-div">
       <h3 class="section-header">Our Process</h3>
-      <p class="text">Initial research went into trying to find existing tools that tried solving the problem of team formation. We found CATME (Comprehensive Assessment of Team Member Effectiveness) to be the only existing solution, which uses their Team-Maker tool to collect student information, and utilizes the data to assign teams according to a criteria specified by the instructor. However, user feedback has shown varying success within classrooms. Case study here.<br><br>Based on this and additional user interviews, our team established three design principles that would help guide our design decision throughout this process.</p>
+      <p class="text">This IA diagram outlines the different sections a user can take through the Fitted experience&colon;</p>
       <br>
       <h5 style="padding-bottom: 16px; opacity: 0.75">We wanted to build a tool that would:
         <ul>
