--- a/teammatic.html
+++ b/teammatic.html
@@ -38,13 +38,13 @@
         <a href="index.html" style="color: #4A4A4A;"><h6 class="headertext">ALEX TRAN</h6></a>
       </div>
       <div class="u-pull-right">
-        <a href="#"
+        <a href="index.html#work"
           <h6 class="headertext" style="display: inline-block; padding-right: 32px">WORK</h6>
         </a>
-        <a href="#projects"
+        <a href="index.html#projects"
           <h6 class="headertext" style="display: inline-block; padding-right: 32px">PROJECTS</h6>
         </a>
-        <a href="#contact"
+        <a href="index.html#contact"
           <h6 class="headertext" style="display: inline-block;">CONTACT</h6>
         </a>
       </div>
@@ -60,19 +60,23 @@
         </div>
       </div>
 
-      <h5 style="padding-bottom: 24px;"><strong>tl&semi;dr&colon;</strong> I was in charge of designing a team formation UI tool for instructors called Teammatic. It features a clear, intuitive system for efficiently creating teams given a series of customizable constraints, i.e. availability, leadership, gender distribution. </h5>
+      <h5 style="padding-bottom: 24px;"><strong>tl&semi;dr&colon;</strong> I was in charge of designing a team formation UI tool for instructors called Teammatic. It features a system for efficiently creating teams given a series of customizable constraints.</h5>
     </div>
 
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
     <!-- Problem Section -->
-    <div class="section-div">
+    <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">The Problem</h3>
       <p class="text">Creating good teams is hard. We found this especially so in the education system; as an instructor, the goal is to formulate efficient teams as soon as possible in order to progress through the material in a timely manner. Our initial findings found that instructors either 1) spent too much time trying to initially assess their students’ skills &amp; qualities before organizing teams, or 2) randomly (or with little assessment) assigned teams that had varying levels of success.</p>
       <br>
       <h5 style="padding-bottom: 24px; opacity: 0.75">We set out to create a tool that would make forming teams more effective and easy for instructors.</h5>
     </div>
 
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
     <!-- Process Section -->
-    <div class="section-div">
+    <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">Our Process</h3>
       <p class="text">Initial research went into trying to find existing tools that tried solving the problem of team formation. We found CATME (Comprehensive Assessment of Team Member Effectiveness) to be the only existing solution, which uses their Team-Maker tool to collect student information, and utilizes the data to assign teams according to a criteria specified by the instructor. However, user feedback has shown varying success within classrooms. Case study here.<br><br>Based on this and additional user interviews, our team established three design principles that would help guide our design decision throughout this process.</p>
       <br>
@@ -85,11 +89,24 @@
       </h5>
       <p class="text">The first thing we wanted to tackle was how instructors would actually form teams; we would focus on the onboarding process after. After a few paper-and-pen sketching sessions, we came up with a few ideas and drew them up as wireframes.</p>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="six columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/teamme-sketches.jpeg">
+          <!-- <h6 class="img-caption" style="text-align: center">average amount of time taken to form teams</h6> -->
+        </div>
+        <div class="six columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/teamme-balsamiq.png">
+          <!-- <h6 class="img-caption" style="text-align: center">overall team compatibility score average</h6> -->
+        </div>
+      </div>
 
       <p class="text">Quickly ideating and prototyping became key here. We wanted to find a balance between providing instructors with enough student information to make informed decisions while also having a large enough workspace to create/edit teams. Further data gathering helped us scrap the Student Quickview component in our initial 3-column design to  a final 2-column design that featured both a larger workspace and filtered Student Roster component (see image below).</p>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/columnDesigns.png">
+        </div>
+      </div>
 
       <h5 style="padding-bottom: 16px; opacity: 0.75">The switch helped us address these issues:
         <ul>
@@ -100,37 +117,64 @@
       </h5>
     </div>
 
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
     <!-- Solution Section -->
-    <div class="section-div">
+    <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">Our Solution</h3>
+      <h5><strong>Design Details</strong></h5>
       <p class="text">Teammatic handles student availability, leadership attribute, gender, role distribution, and student preferences for possible teammates. Once the data is received, instructors will have the ability to choose constraints of how they want to create teams. The algorithm used for the team suggestions will account for these various constraints. After a suggested group of teams have been formed, the instructor will have the ability to modify these teams to their liking.</p>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/studentRosterProgression.png">
+        </div>
+      </div>
 
-      <p class="text">Student Roster (v0.3), (v0.7), (v1.0).<br>This is one of the UI components that was prototyped the most. We really tried to find a balance between information visibility and screen real-estate. Including a filter makes it easier for instructors to view the information they need at any given time.</p>
+      <h6 class="img-caption"><strong>Student Roster (v0.3), (v0.7), (v1.0).</strong><br>This is one of the UI components that was prototyped the most. We really tried to find a balance between information visibility and screen real-estate. Including a filter makes it easier for instructors to view the information they need at any given time.</h6>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/studentSwapProcess.png">
+        </div>
+      </div>
 
-      <p class="text">Student Swap Process (v1.0).<br>We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface. Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.</p>
+      <h6 class="img-caption"><strong>Student Swap Process (v1.0).</strong><br>We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface. Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.</h6>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/constraintModalProgression.png">
+        </div>
+      </div>
 
-      <p class="text">Constraint Modal (v0.3), (v0.6), (v1.0).<br>Apart from the minor UI changes, our research showed that instructors wanted to see all available constraints possible and choose accordingly with the least amount of interaction cost. Don’t mind the varying modal sizes…</p>
+      <h6 class="img-caption"><strong>Constraint Modal (v0.3), (v0.6), (v1.0).</strong><br>Apart from the minor UI changes, our research showed that instructors wanted to see all available constraints possible and choose accordingly with the least amount of interaction cost. Don’t mind the varying modal sizes…</h6>
+      <br>
     </div>
 
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
     <!-- Outcomes Section -->
-    <div class="section-div">
+    <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">Outcomes</h3>
       <p class="text">We conducted a study with 14 teaching assistants from various group-based courses, asking them to create teams with a set of constraint requirements, i.e. 4 students per team, one student per team, gender balance. As you can see from the results below, Teammatic outperformed our participants in both time and overall teammate compatibility.</p>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="six columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/overallTime.png">
+          <!-- <h6 class="img-caption" style="text-align: center">average amount of time taken to form teams</h6> -->
+        </div>
+        <div class="six columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/overallAverage.png">
+          <!-- <h6 class="img-caption" style="text-align: center">overall team compatibility score average</h6> -->
+        </div>
+      </div>
 
-      <p class="text"><strong>Lessons learned</strong></p>
+      <h5 style="padding-top: 24px"><strong>Lessons Learned</strong></h5>
       <p class="text">Keeping track of all the students' information was the biggest problem. Given the many requirements, many participants chose to ignore the soft constraints (&#35; of overlapping schedule availability, &#35; of leaders per team, etc.) and focused their time on the hard constraints (# of students per team, student preferences, etc.) listed. It was a common trend that participants would eventually start to randomly place students together without any regard to the constraints given.</p>
 
       <p class="text">Teammatic was a research project that served the basis for my friend Carolyn’s thesis. I wanted to help her not only because she was a great person to work with, but because I really empathized with the problem that was presented. Is there really anything worse than a group member who slacks off?<br><br>While designing Teammatic, we already accepted that perfect team formation is impossible. However, we learned that instructors are generally happy with auto-generated teams based on student compatibility, as long as we provided them with the freedom and flexibility to make changes when desired, i.e. a mixed-initiative interface.</p>
 
-      <p class="text"><strong>Moving forward</strong></p>
+      <h5 style="padding-top: 24px"><strong>Moving Forward</strong></h5>
       <p class="text">The interface is a work in progress, but we are heading in the right direction based on positive user feedback (hooray!). Currently Teammatic only has the ability to generate teams; it has yet to become a fully working product. It would be ideal to incorporate the entire team formation process into Teammatic, from gathering student data, to forming teams, to post-course feedback. <br><br>For now, Teammatic is being used by a few involved professors, who will continue to give us insight into how we can improve the interface and how we might implement new, undiscovered features.
       </p>
     </div>
