--- a/thinkabit.html
+++ b/thinkabit.html
@@ -38,13 +38,13 @@
         <a href="index.html" style="color: #4A4A4A;"><h6 class="headertext">ALEX TRAN</h6></a>
       </div>
       <div class="u-pull-right">
-        <a href="#"
+        <a href="index.html#work"
           <h6 class="headertext" style="display: inline-block; padding-right: 32px">WORK</h6>
         </a>
-        <a href="#projects"
+        <a href="index.html#projects"
           <h6 class="headertext" style="display: inline-block; padding-right: 32px">PROJECTS</h6>
         </a>
-        <a href="#contact"
+        <a href="index.html#contact"
           <h6 class="headertext" style="display: inline-block;">CONTACT</h6>
         </a>
       </div>
