media query for titles

--- a/fitted.html
+++ b/fitted.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>The Portfolio of Alex Tran</title>
+  <title>Alex Tran: Fitted</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -56,44 +56,59 @@
       <h6>design lead // UC San Diego 2016</h6>
       <div class="row">
         <div class="twelve columns">
-          <img class="landing-img u-max-full-width" src="images/teamme-final.png">
+          <img class="landing-img u-max-full-width" src="images/fitted-overview.png">
         </div>
       </div>
 
       <h5 style="padding-bottom: 24px;"><strong>tl&semi;dr&colon;</strong> I worked with a team to design a mobile clothing app aimed to providing users with accurate sizing recommendations based on their preferences across clothing brands.</h5>
     </div>
 
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
     <!-- Problem Section -->
-    <div class="section-div">
+    <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">The Problem</h3>
       <p class="text">The idea came from an issue we each saw every time we bought clothes online. It seemed more often than not <strong>the ease of online shopping was overshadowed by the challenge of finding the right size</strong>. It’s hard to know what fits best when there is so much variation in sizing across different brands. People could choose to estimate their size, and then deal with returning clothes if they do not fit. Or, people could spend hours in fitting room. But who really wants to be spending their time doing that?</p>
       <br>
-
       <h3 class="section-header">A Solution</h3>
       <p class="text">Fitted aims to give you the confidence in finding the right-sized clothes with accurate body measurements in order to provide you with personalized sizing recommendations. Users can browse styles from their favorite brands and be given accurate sizing suggestions tailored to their preferences and/or needs.</p>
-      <br>
-      <h5 style="padding-bottom: 24px; opacity: 0.75">We hoped to address these key problem areas: <strong>finding the right size</strong>, <strong>establishing trust through sizing recommendations</strong>, and <strong>streamlining the online shopping experience</strong>.</h5>
+      <h5 style="padding-bottom: 16px; opacity: 0.75">We hoped to address these key problem areas: finding the right size, establishing trust through sizing recommendations, and streamlining the online shopping experience.</h5>
     </div>
 
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
     <!-- Process Section -->
-    <div class="section-div">
+    <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">Our Process</h3>
-      <p class="text">This IA diagram outlines the different sections a user can take through the Fitted experience&colon;</p>
-      <br>
-      <h5 style="padding-bottom: 16px; opacity: 0.75">We wanted to build a tool that would:
-        <ul>
-          <li>help instructors <strong>quickly form teams</strong></li>
-          <li><strong>provide instructors with insightful feedback</strong> on team compatibility</li>
-          <li><strong>be simple and easy</strong> for instructors to use</li>
-        </ul>
-      </h5>
+      <h5><strong>Information Architecture</strong></h5>
+      <p class="text">This IA diagram outlines the different sections a user can take through the Fitted experience:</p>
+
+      <!-- Fitted IA picture -->
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/fitted-ia.png">
+        </div>
+      </div>
       <p class="text">The first thing we wanted to tackle was how instructors would actually form teams; we would focus on the onboarding process after. After a few paper-and-pen sketching sessions, we came up with a few ideas and drew them up as wireframes.</p>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="six columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/teamme-sketches.jpeg">
+          <!-- <h6 class="img-caption" style="text-align: center">average amount of time taken to form teams</h6> -->
+        </div>
+        <div class="six columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/teamme-balsamiq.png">
+          <!-- <h6 class="img-caption" style="text-align: center">overall team compatibility score average</h6> -->
+        </div>
+      </div>
 
       <p class="text">Quickly ideating and prototyping became key here. We wanted to find a balance between providing instructors with enough student information to make informed decisions while also having a large enough workspace to create/edit teams. Further data gathering helped us scrap the Student Quickview component in our initial 3-column design to  a final 2-column design that featured both a larger workspace and filtered Student Roster component (see image below).</p>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/columnDesigns.png">
+        </div>
+      </div>
 
       <h5 style="padding-bottom: 16px; opacity: 0.75">The switch helped us address these issues:
         <ul>
@@ -104,37 +119,64 @@
       </h5>
     </div>
 
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
     <!-- Solution Section -->
-    <div class="section-div">
+    <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">Our Solution</h3>
+      <h5><strong>Design Details</strong></h5>
       <p class="text">Teammatic handles student availability, leadership attribute, gender, role distribution, and student preferences for possible teammates. Once the data is received, instructors will have the ability to choose constraints of how they want to create teams. The algorithm used for the team suggestions will account for these various constraints. After a suggested group of teams have been formed, the instructor will have the ability to modify these teams to their liking.</p>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/studentRosterProgression.png">
+        </div>
+      </div>
 
-      <p class="text">Student Roster (v0.3), (v0.7), (v1.0).<br>This is one of the UI components that was prototyped the most. We really tried to find a balance between information visibility and screen real-estate. Including a filter makes it easier for instructors to view the information they need at any given time.</p>
+      <h6 class="img-caption"><strong>Student Roster (v0.3), (v0.7), (v1.0).</strong><br>This is one of the UI components that was prototyped the most. We really tried to find a balance between information visibility and screen real-estate. Including a filter makes it easier for instructors to view the information they need at any given time.</h6>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/studentSwapProcess.png">
+        </div>
+      </div>
 
-      <p class="text">Student Swap Process (v1.0).<br>We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface. Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.</p>
+      <h6 class="img-caption"><strong>Student Swap Process (v1.0).</strong><br>We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface. Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.</h6>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/constraintModalProgression.png">
+        </div>
+      </div>
 
-      <p class="text">Constraint Modal (v0.3), (v0.6), (v1.0).<br>Apart from the minor UI changes, our research showed that instructors wanted to see all available constraints possible and choose accordingly with the least amount of interaction cost. Don’t mind the varying modal sizes…</p>
+      <h6 class="img-caption"><strong>Constraint Modal (v0.3), (v0.6), (v1.0).</strong><br>Apart from the minor UI changes, our research showed that instructors wanted to see all available constraints possible and choose accordingly with the least amount of interaction cost. Don’t mind the varying modal sizes…</h6>
+      <br>
     </div>
 
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
     <!-- Outcomes Section -->
-    <div class="section-div">
+    <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">Outcomes</h3>
       <p class="text">We conducted a study with 14 teaching assistants from various group-based courses, asking them to create teams with a set of constraint requirements, i.e. 4 students per team, one student per team, gender balance. As you can see from the results below, Teammatic outperformed our participants in both time and overall teammate compatibility.</p>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="six columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/overallTime.png">
+          <!-- <h6 class="img-caption" style="text-align: center">average amount of time taken to form teams</h6> -->
+        </div>
+        <div class="six columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/overallAverage.png">
+          <!-- <h6 class="img-caption" style="text-align: center">overall team compatibility score average</h6> -->
+        </div>
+      </div>
 
-      <p class="text"><strong>Lessons learned</strong></p>
+      <h5 style="padding-top: 24px"><strong>Lessons Learned</strong></h5>
       <p class="text">Keeping track of all the students' information was the biggest problem. Given the many requirements, many participants chose to ignore the soft constraints (&#35; of overlapping schedule availability, &#35; of leaders per team, etc.) and focused their time on the hard constraints (# of students per team, student preferences, etc.) listed. It was a common trend that participants would eventually start to randomly place students together without any regard to the constraints given.</p>
 
       <p class="text">Teammatic was a research project that served the basis for my friend Carolyn’s thesis. I wanted to help her not only because she was a great person to work with, but because I really empathized with the problem that was presented. Is there really anything worse than a group member who slacks off?<br><br>While designing Teammatic, we already accepted that perfect team formation is impossible. However, we learned that instructors are generally happy with auto-generated teams based on student compatibility, as long as we provided them with the freedom and flexibility to make changes when desired, i.e. a mixed-initiative interface.</p>
 
-      <p class="text"><strong>Moving forward</strong></p>
+      <h5 style="padding-top: 24px"><strong>Moving Forward</strong></h5>
       <p class="text">The interface is a work in progress, but we are heading in the right direction based on positive user feedback (hooray!). Currently Teammatic only has the ability to generate teams; it has yet to become a fully working product. It would be ideal to incorporate the entire team formation process into Teammatic, from gathering student data, to forming teams, to post-course feedback. <br><br>For now, Teammatic is being used by a few involved professors, who will continue to give us insight into how we can improve the interface and how we might implement new, undiscovered features.
       </p>
     </div>
