--- a/thinkabit.html
+++ b/thinkabit.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>The Portfolio of Alex Tran</title>
+  <title>Alex Tran: Thinkabit Lab</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
